deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-template
spec:
  replicas: 1
  template:
    metadata:
      labels:
        elasticAppLogIndex: dotnet-template
    spec:
      containers:
        - image: ghcr.io/politiet/dotnet-template:VERSION_NOT_SET
          name: dotnet-template
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 1
            periodSeconds: 10

          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
            
          volumeMounts:
            - name: appsettings
              mountPath: /app/config
      volumes:
        - name: appsettings
          configMap:
            name: appsettings
            
      imagePullSecrets:
        - name: githubkey
