deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-template-service
spec:
  selector:
    app: dotnet-template
  ports:
    - name: http
      protocol: TCP
      port: 8080
