deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-template-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.middlewares: VALUE_NOT_SET

spec:
  rules:
    - host: HOST_NOT_SET
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dotnet-template-service
                port:
                  number: 8080
